# ChangeLog for app-emacs/org-mode
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.81 2009/10/03 20:11:56 fauli Exp $

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  -org-mode-6.30.ebuild:
  clean up

*org-mode-6.31a (03 Oct 2009)

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  +org-mode-6.31a.ebuild:
  version bump

  08 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  -org-mode-6.29c.ebuild:
  clean up

*org-mode-6.30e (08 Sep 2009)

  08 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  +org-mode-6.30e.ebuild:
  version bump

*org-mode-6.30 (02 Sep 2009)

  02 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  +org-mode-6.30.ebuild:
  version bump

  17 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  -org-mode-6.28d.ebuild, -org-mode-6.28e.ebuild:
  clean up

*org-mode-6.29c (08 Aug 2009)

  08 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  +org-mode-6.29c.ebuild:
  version bump

*org-mode-6.28e (29 Jun 2009)

  29 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  -org-mode-6.27a.ebuild, +org-mode-6.28e.ebuild:
  version bump and clean up

*org-mode-6.28d (27 Jun 2009)

  27 Jun 2009; Ulrich Mueller <ulm@gentoo.org> +org-mode-6.28d.ebuild:
  Version bump.

  03 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  -org-mode-6.26d.ebuild, -org-mode-6.27.ebuild:
  clean up

*org-mode-6.27a (27 May 2009)

  27 May 2009; Christian Faulhammer <fauli@gentoo.org>
  +org-mode-6.27a.ebuild:
  version bump

*org-mode-6.27 (24 May 2009)

  24 May 2009; Ulrich Mueller <ulm@gentoo.org> -org-mode-6.26a.ebuild,
  +org-mode-6.27.ebuild:
  Version bump. Remove intermediate version.

*org-mode-6.26d (22 Apr 2009)

  22 Apr 2009; Christian Faulhammer <fauli@gentoo.org>
  -org-mode-6.25f.ebuild, +org-mode-6.26d.ebuild:
  version bump and clean up

*org-mode-6.26a (20 Apr 2009)

  20 Apr 2009; Christian Faulhammer <fauli@gentoo.org>