@@ -5,15 +5,17 @@ AUX 51org-mode-gentoo.el 157 RMD160 90316091dc66135d418700a0559d9892962493ab SHA
 DIST org-6.21b.tar.gz 1838283 RMD160 3ad20af96bbd01c8ea66f1e5b7f2997608978e0d SHA1 bddbb7ad7ace87d44832ac5f81ddcf0bde5e035f SHA256 b2e51ab469b34b4133406451f024b392c10598433bdcfe5147a1da3bc2d9aafa
 DIST org-6.30e.tar.gz 2157794 RMD160 af9a1f7d7439c8712ba7b7dccac862efdd97292e SHA1 73f3825506cf426b723903ea1b847fd1668b3bab SHA256 365076c8409ebd2587f014a23c02936510ddb9f31eaaf5a03ae72f40370f8636
 DIST org-6.31a.tar.gz 2219901 RMD160 dbabe49f94fc1371fb32db8209696efeaf6a2ddb SHA1 089e64f6eaa370808135a0bdfe429e643777f452 SHA256 013df74afb5533c917d28de8c5ea2e019e955b18603935d8dd54463aa42ad0a0
+DIST org-6.32.tar.gz 2261306 RMD160 58005b2a49e7e12c6ea80824d8b277f7df5d53fb SHA1 769abd4e45e15dfd87da3ab1cd03752aa8166d00 SHA256 c7058341bfefd52948ee15fad290354f921d0678122bfb7df4a31a4ef772dc2e
 EBUILD org-mode-6.21b.ebuild 1074 RMD160 15cb4133b51b7264c23b6cc84c876d10b1ddc48d SHA1 c6c841f0e0bfec550c759883c013a21a0ce23a59 SHA256 08fcb727b999026cef0f6f3b68818a1f35a7b1af55b9526b6e85eea19f5a61de
 EBUILD org-mode-6.30e.ebuild 1077 RMD160 66b2862407e3b78ad7173eff74d09e8600e1a1bd SHA1 e2b0e239159ba396c37eb889f7cc65313423f77b SHA256 9a38a25936b1f300011256dd7e5c086e5cfd5b36f59fef1062e00825bdabbc21
 EBUILD org-mode-6.31a.ebuild 1077 RMD160 6e24a776fc31ac3b6cdf67828e75a5c720b4ffbd SHA1 8920b09b33fc5ca1af79f65b6b603e9fa5b5dc33 SHA256 3dff1b8399ba94788b7275a74f20f61b94d35ebb7d49873850f5c8b8190cf063
-MISC ChangeLog 12113 RMD160 760ab9ec381c7b5555587cfadf2aa42db01ae9c0 SHA1 b1e70e829e9ac0ebd98f81521236ff4fc97864c7 SHA256 0da51d8065bb978b377aa551cb45dc33e5189606f5c778c25989447e9e250ae9
+EBUILD org-mode-6.32.ebuild 1076 RMD160 408c97f92fa5ec43a3571b4b6c1b02073421a01a SHA1 ddec6f4d56ff45a6bff01632ea70da0cedfe99d2 SHA256 e7afe55f05bb0e82f50aba68f50da9c52836d92ef141dbee82a7c9e4bed98d08
+MISC ChangeLog 12239 RMD160 ffb7d2e5137d0024326347f78049a4421e1d16ac SHA1 4e6cbb7862823bb573138dcea97c4386a4b6807b SHA256 eda4bf59f1a17cd379e33e850c139a8342282995224c560ad4126e1e412b9c5c
 MISC metadata.xml 1072 RMD160 32ec82f4bbf0e45707ba11c3da11d5edc0b0b4dd SHA1 617b871a3e1f6743abc31798c065283386822e34 SHA256 9530293521d00b2f672c420c0f673d82600c0bfacdfbb6b77ffa55408f0866f8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrHsBgACgkQNQqtfCuFneNfWQCeMYC2Fd19yswDXptpwBskkIHm
-FtEAoIygiZIe+W+Y+e1vSS/ugRbdWVPS
-=1ZYp
+iEYEARECAAYFAkrlqHQACgkQNQqtfCuFneMhSACeJGGi0vxWRlAzdIKqqdV5lzrN
+sysAniMI/h6Y2M8JcmIRJP0w4pOHl1CV
+=FFU3
 -----END PGP SIGNATURE-----
