@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/org-mode
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.81 2009/10/03 20:11:56 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/org-mode/ChangeLog,v 1.82 2009/10/26 13:46:53 fauli Exp $
+
+*org-mode-6.32 (26 Oct 2009)
+
+  26 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
+  +org-mode-6.32.ebuild:
+  version bump
 
   03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
   -org-mode-6.30.ebuild:
